--- a/public/design-elements.html
+++ b/public/design-elements.html
@@ -65,17 +65,6 @@
 				</nav>
 			</div>
 	</header>
-	<div class="flex mb-4">
-		<div class="w-full banner-home flex items-center">
-			<div class="flex items-center justify-end bg-blue-500 banner-box">
-				<div class="text-white banner-text">
-					<h2 class="page-heading">Always Safe Always Prepared</h2>
-					<p class="font-semibold">Industry-leading fire protection solutions you can trust</p>
-					<p class="uppercase font-semibold pt-2">Learn more <i class="fa fa-angle-right"></i></p>
-				</div>
-			</div>
-		</div>
-	</div>
 	<div class="flex mb-4" id='main'>
 		<div class="w-full">
 		<h1 class="font-display page-heading text-center text-gray-900 font-bold mt-5 mb-5">Fire Protection Systems & Services</h1>
@@ -264,7 +253,7 @@
 			<hr class="bg-blue-300 h-1">
 		</div>
 	</div>
-	<div class="lg:flex mb-4 ml-auto mr-auto lg:mr-0 lg:ml-0 w-3/4 lg:w-full">
+	<div class="lg:flex mb-4 ml-auto mr-auto lg:mr-0 lg:ml-0 w-3/4 lg:w-full bg-white">
 	  <div class="w-full lg:w-1/6  font-body flex flex-wrap text-gray-700 text-right">
 			<h2 class="lg:ml-20 text-2xl font-display text-orange-700 font-bold">Color</h2>
 		</div>
