--- a/public/homepage.html
+++ b/public/homepage.html
@@ -14,10 +14,10 @@
 
 	<!-- Header with Nav menu section -->
 	<header class="lg:px-2 px-1 border-b-8 border-green-500 bg-white flex flex-wrap items-center py-3 " id='pagehead'>
-			<div class="container ml-auto mr-auto px-2">
+			<div class="container-main ml-auto mr-auto w-full">
 					<nav class="block pt-2">
 						<ul class="block lg:flex lg:flex-wrap xl:flex-no-wrap  xl:items-stretch xl:justify-between ">
-							<li class="flex text-center lg:text-left w-full lg:w-1/2 xl:w-1/3 justify-between" >
+							<li class="flex text-center lg:text-left w-full lg:w-1/4 xl:w-1/3 justify-between" >
 							<a href="/"><img src="./assets/img/rapidfire-logo.png" alt=""></a>
 			
 								<a class="menu-toggle lg:hidden  align-top h-12" id='mobileMenuToggle' v-on:click="openMobileMenuContainer"  v-bind:class="{ 'change': m_showing}">
@@ -26,10 +26,10 @@
 								  <div class="bar3"></div>
 								</a>
 							  </li>
-							<li class="primary_nav lg:flex lg:justify-center lg:w-full lg:w-auto lg:ml-auto lg:mr-auto xl:mr-0 items-center" v-bind:class="{'block': m_showing, 'hidden': !m_showing}">
+							<li class="primary_nav lg:flex lg:justify-center lg:w-3/4 xl:w-2/3 lg:ml-auto lg:mr-auto xl:mr-0 items-center" v-bind:class="{'block': m_showing, 'hidden': !m_showing}">
 								<a href="#" class="menu-title lg:px-4 py-3 lg:py-1 block lg:flex mr-auto ml-auto lg:m-0">Our Work</a>
 								<a href="#" class="menu-title lg:px-4 py-3 lg:py-1 block lg:flex mr-auto ml-auto lg:m-0">Services</a>
-								<button class="menu-title w-full lg:w-auto border-none lg:pl-4 pr-0 pl-0 py-3 lg:py-1 block lg:flex lg:mr-auto lg:ml-auto lg:m-0 text-left" v-on:mouseover.self="hovermenu" v-on:click.self="togglemenu" v-on:mouseout='hideboard' data-menu='menu-one' name="Company">Company<i class="text-blue-500 ml-1 lg:pr-4 fa fa-angle-down"></i></button>
+								<button class="menu-title border-none pr-0 pl-0 py-3 lg:py-1 block lg:flex lg:mr-auto lg:ml-auto lg:m-0 text-left" v-on:mouseover.self="hovermenu" v-on:click.self="togglemenu" v-on:mouseout='hideboard' data-menu='menu-one' name="Company">Company<i class="text-blue-500 ml-1 lg:pr-4 fa fa-angle-down"></i></button>
 								<div class="vertical-menu" data-nav='menu-one' data-menu-place='left' v-bind:style="{ display: display.one }">
 									<ul class="subnav">
 									
@@ -43,7 +43,7 @@
 								</div>
 								<a href="#" class="menu-title lg:px-4 py-3 lg:py-1 block lg:flex mr-auto ml-auto lg:m-0">Careers</a>
 								<a href="#" class="menu-title lg:px-4 py-3 lg:py-1 block lg:flex mr-auto ml-auto lg:m-0">Contact</a>
-								<button class="menu-title w-full lg:w-auto border-none lg:pl-4 pr-0 pl-0 py-3 lg:py-1 block lg:flex lg:mr-auto lg:ml-auto lg:m-0 text-left" v-on:mouseover.self="hovermenu" v-on:click.self="togglemenu" v-on:mouseout='hideboard' data-menu='menu-two' name="Acquisitions">Acquisitions<i class="text-blue-500 ml-1 lg:pr-4 fa fa-angle-down"></i></button>
+								<button class="menu-title border-none pr-0 pl-0 py-3 lg:py-1 block lg:flex lg:mr-auto lg:ml-auto lg:m-0 text-left" v-on:mouseover.self="hovermenu" v-on:click.self="togglemenu" v-on:mouseout='hideboard' data-menu='menu-two' name="Acquisitions">Acquisitions<i class="text-blue-500 ml-1 lg:pr-4 fa fa-angle-down"></i></button>
 								<div class="vertical-menu" data-nav='menu-two' data-menu-place='left' v-bind:style="{ display: display.two }">
 									<ul class="subnav">
 									
@@ -107,8 +107,8 @@
 	</div>
 
 	<!-- Industries served image/link section -->
-	<div class="container flex flex-col mb-4">
-		<div class="xl:w-full md:mx-4 lg:mr-auto lg:ml-auto md:grid md:grid-cols-3 lg:grid-cols-4 auto-rows-fr gap-3 lg:gap-6">
+	<div class="flex flex-col mb-4">
+		<div class="xl:w-full md:mx-4 container-main xl:mr-auto xl:ml-auto md:grid md:grid-cols-3 lg:grid-cols-4 auto-rows-fr gap-3 lg:gap-6">
 			<div class="md:bg-white ml-auto mr-auto">
 				<a href="#">
 					<div class="card h-full">
