sorted out some issues that Safari made obvious

--- a/public/index.html
+++ b/public/index.html
@@ -392,7 +392,7 @@
 					<img src="./assets/img/fire-suppression.jpg" alt="" class="mb-4">
 					<div class="svc-cta-box flex flex-row show-for-large-flex">
 						<div class="w-2/5"><p class="text-white">Taking care of all your Fire Protection needs!</p></div>
-						<div class="w-1/2 ml-10 mt-4"><a href="" class="btn-cta uppercase">Request a Quote <i class="fa fa-angle-right"></i></a></div>
+						<div class="w-3/5 flex flex-row justify-end items-center"><a href="" class="btn-cta uppercase">Request a Quote <i class="fa fa-angle-right"></i></a></div>
 					</div>
 				</div>
 			</div>
@@ -512,7 +512,7 @@
 						</div>
 						<h3 class="timeline-title">Rapid Fire Protection, Inc. founded</h3>
 						<p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis eu pede mollis pretium. Pellentesque ut neque.</p>
-						<img src="" alt="" class="image">
+						<img src="https://via.placeholder.com/440x300/ccc/fff.png" alt="" class="image">
 					</div>
 				</li>
 				<li class="timeline-item">
@@ -541,7 +541,7 @@
 						</div>
 						<h3 class="timeline-title">Event Title</h3>
 						<p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis eu pede mollis pretium. Pellentesque ut neque. </p>
-						<img src="" alt="" class="image">
+						<img src="https://via.placeholder.com/440x300/ccc/fff.png" alt="" class="image">
 					</div>
 				</li>
 				<li class="timeline-item">
@@ -944,7 +944,7 @@
 				</ul>
 				<div class="svc-cta-box flex flex-row show-for-large-flex mt-4 mr-2">
 					<div class="w-2/5"><p class="text-white">Taking care of all your Fire Protection needs!</p></div>
-					<div class="w-1/2 ml-10 mt-4"><a href="" class="btn-cta uppercase">Request a Quote <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+					<div class="w-3/5 flex flex-row justify-end items-center"><a href="" class="btn-cta uppercase">Request a Quote <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
 				</div>
 			</div>
 		</div>
@@ -960,7 +960,7 @@
 			<div class="flex flex-col lg:flex-row">
 				<div class="w-5/6 mr-auto ml-auto xl:w-3/5 mt-12">
 					<h3 class="heading-xxs text-blue-500 uppercase">Let's Talk About Your Needs</h3>
-					<form action="" class="flex flex-col">
+					<form action="" class="flex flex-col mt-4">
 						<ul>
 							<li>
 								<label for="fullName">Full Name <span class="required">*</span></label>
