JS changes, mostly

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -70,9 +70,8 @@
 
 	<!-- Homepage banner -->
 	<div class="flex mb-4">
-		<div class="w-full banner-home banner-video-wrapper flex items-center">
-			<div class="video-overlay"></div>
-			<!-- add &playlist=hnp1pt8biD4 (the latter part being the video id) to force it to loop -->
+		<div class="w-full banner-home banner-video-wrapper">
+			<div class="banner-video-overlay"></div>
 			<iframe src='https://player.vimeo.com/video/697143196?background=1&amp;autoplay=1&amp;loop=1&amp;byline=0&amp;title=0' frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
 			<div class="flex sm:items-center sm:justify-end bg-blue-500 banner-box">
 				<div class="text-white banner-text ml-4 sm:ml-0">
